# autosphere-ids

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/autosphere_api/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
backend/autosphere_api/management/commands/: seed_demo.py
backend/autosphere_api/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/tests/: test_smoke.py
frontend/: README.md  eslint.config.js  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/dashboard/: QuickActionGlyph.vue
frontend/src/components/dev/: DevSessionSwitcher.vue
frontend/src/components/layout/: PublicAppBar.vue
frontend/src/layouts/: AdminLayout.vue  AuthLayout.vue  DashboardLayout.vue  PublicLayout.vue
frontend/src/mocks/: README.md
frontend/src/mocks/account/: profile.json  security.json
frontend/src/mocks/admin/: appointments.json  brands.json  catalog.json  dashboard.json  listings.json  locations.json  models.json  moderation.json  reports.json  suspensions.json  users.json  (+1 more)
frontend/src/router/: guards.js  index.js
frontend/src/services/: account.js  admin.js  apiUtils.js  appointments.js  auth.js  buyer.js  catalog.js  demoOwners.js  http.js  index.js  lessor.js  mockResponse.js  mockUtils.js  profiles.js  public.js  seller.js  shared.js
frontend/src/stores/: auth.js
frontend/tests/: guards-and-store.test.js  layouts.test.js  public-app-bar.test.js  routes.test.js
(+126 files in other folders)
